vbnc/vbnc/tests/Errors/30311-39.vb
Class Date1
    Public Shared Function Main() As Integer
        Dim a As Date
        Dim b As Date
        Dim c As Integer = a - b
    End Function
End Class